# Indigo-Tech

./: README.md  daily_run.sh  pyproject.toml  video_list.csv
docs/: 00-index.md
src/: black_list.csv  daily_run.sh  get_all_list.py  update_youtube.py  video_list.csv
src/lib/: myai.py  mytube.py  prompts.txt
subtitle/: 0Hd69jVEIRs.txt  1VluGjs0vxI.txt  3L2qncyW5f8.txt  3NWYNjEhplI.txt  4tR3V-bonVk.txt  52k17Mm4ao4.txt  5pL95EZu5-Q.txt  8Gbv3pSdjss.txt  94WbU_LF43o.txt  CmnViYgHIOg.txt  EfCs72n4eyA.txt  HQQrjPHafa0.txt  HonamLNy_UU.txt  IdCJzvP-HBE.txt  K6vwcRamfLs.txt  Ll-jdFyFWOE.txt  MWKKk59DzqE.txt  Vw7Nl3IbNfY.txt  YwLgbY2u0VY.txt  ZyQYmpVxXwE.txt  _t1JdqNQNXE.txt  cClTc8vD_as.txt  iFUnf6-_7OI.txt  kBAjsCzKPbE.txt  kNvm04IiCGQ.txt  mXH3vCEuusY.txt  mqjxV8J3JsE.txt  nKt4nxyVIpw.txt  o9Qe5mF2tBo.txt  owE3BhcsRMg.txt  rtlT_gN6ock.txt  vWT4LJip1pg.txt  wQN49lCfxZA.txt
summary/: 0Hd69jVEIRs.md  1VluGjs0vxI.md  3L2qncyW5f8.md  3NWYNjEhplI.md  4tR3V-bonVk.md  52k17Mm4ao4.md  5pL95EZu5-Q.md  8Gbv3pSdjss.md  94WbU_LF43o.md  CmnViYgHIOg.md  EfCs72n4eyA.md  HQQrjPHafa0.md  HonamLNy_UU.md  IdCJzvP-HBE.md  K6vwcRamfLs.md  Ll-jdFyFWOE.md  MWKKk59DzqE.md  Vw7Nl3IbNfY.md  YwLgbY2u0VY.md  ZyQYmpVxXwE.md  _t1JdqNQNXE.md  cClTc8vD_as.md  iFUnf6-_7OI.md  kBAjsCzKPbE.md  kNvm04IiCGQ.md  mXH3vCEuusY.md  mqjxV8J3JsE.md  nKt4nxyVIpw.md  o9Qe5mF2tBo.md  owE3BhcsRMg.md  rtlT_gN6ock.md  vWT4LJip1pg.md  wQN49lCfxZA.md
