[project]
name = "Indigo-Tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brotli>=1.1.0",
    "certifi>=2023.7.22",
    "google-generativeai>=0.8.4",
    "markdown>=3.5.1",
    "mutagen>=1.47.0",
    "openai>=1.3.0",
    "pandas>=2.0.0",
    "pycryptodomex>=3.19.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "websockets>=12.0",
    "yt-dlp>=2023.11.16",
]
